tests/baselines/reference/for-of2.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of2.ts(1,7): error TS1155: 'const' declarations must be initialized
tests/cases/conformance/es6/for-ofStatements/for-of2.ts(2,6): error TS2485: The left-hand side of a 'for...of' statement cannot be a previously defined constant.


==== tests/cases/conformance/es6/for-ofStatements/for-of2.ts (2 errors) ====
    const v;
          ~
!!! error TS1155: 'const' declarations must be initialized
    for (v of []) { }
         ~
!!! error TS2485: The left-hand side of a 'for...of' statement cannot be a previously defined constant.